syntax = "proto3";

package game_catalog;

service GameCatalogService {
  rpc Connect(Request) returns (Reply);
}

message Game {
	int32 price = 1;
	string name = 2;
}

message Request {
	oneof request {
		GetGamesRequest getGames = 1;
		GetPriceRequest getPrice = 2;
		AddGameRequest addGame = 3;
	}
}

message GetGamesRequest {
}

message GetPriceRequest {
	string name = 1;
}

message AddGameRequest {
	Game game = 1;
}


message Reply {
	oneof replay {
		GamesReplay games = 1;
		PriceReplay price = 2;
		OperationResultReplay result = 3;
	}
}

message GamesReplay {
	repeated Game games = 1;
}

message PriceReplay {
	int32 price = 1;
}

message OperationResultReplay {
	bool result = 1;
}
